--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>DOGGO</title>
     <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="src/dog.js"></script>
+    <script type="text/javascript" src="src/adapter.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
     <link rel="shortcut icon" href="doge.jpeg">
   </head>
@@ -16,6 +18,7 @@
     </div>
     <div id="dog-summary-container">
       <h1>DOGGO:</h1>
+
       <div id="dog-info">
 
       </div>
