--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>DOGGO</title>
     <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="src/index.js"></script>
     <link rel="shortcut icon" href="doge.jpeg">
   </head>
   <body>
     <div id="filter-div">
-      <button id="good-dog-filter">Filter good dogs: OFF</button>
+      <button id="good-dog-filter" value="off">Filter good dogs: OFF</button>
     </div>
     <div id="dog-bar">
 
@@ -20,5 +19,7 @@
 
       </div>
     </div>
+    <script type="text/javascript" src="src/pup.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
